--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -6,5 +6,7 @@
 
   roles:
     - role: ansible-role-openssh
-      openssh_allow_users: root
-      openssh_allow_groups: root
+      openssh_allow_users:
+        - root
+      openssh_allow_groups:
+        - root
