Shorter task names.

--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: assert | Test if ssh_port is set correctly
+- name: assert | Test ssh_port
   ansible.builtin.assert:
     that:
       - openssh_port is defined
@@ -9,7 +9,7 @@
       - openssh_port < 65536
     quiet: yes
 
-- name: assert | Test if openssh_address_family is set correctly
+- name: assert | Test openssh_address_family
   ansible.builtin.assert:
     that:
       - openssh_address_family is defined
@@ -17,21 +17,21 @@
       - openssh_address_family in [ "any", "inet", "inet6" ]
     quiet: yes
 
-- name: assert | Test if openssh_listen_addresses is set correctly
+- name: assert | Test openssh_listen_addresses
   ansible.builtin.assert:
     that:
       - openssh_listen_addresses is defined
       - openssh_listen_addresses is iterable
     quiet: yes
 
-- name: assert | Test if openssh_host_keys is set correctly
+- name: assert | Test openssh_host_keys
   ansible.builtin.assert:
     that:
       - openssh_host_keys is defined
       - openssh_host_keys is iterable
     quiet: yes
 
-- name: assert | Test if openssh_rekey_limit is set correctly
+- name: assert | Test openssh_rekey_limit
   ansible.builtin.assert:
     that:
       - openssh_rekey_limit is defined
@@ -39,7 +39,7 @@
       - openssh_rekey_limit is not none
     quiet: yes
 
-- name: assert | Test if openssh_syslog_facility is set correctly
+- name: assert | Test openssh_syslog_facility
   ansible.builtin.assert:
     that:
       - openssh_syslog_facility is defined
@@ -47,7 +47,7 @@
       - openssh_syslog_facility in [ "DAEMON", "USER", "AUTH", "LOCAL0", "LOCAL1", "LOCAL2", "LOCAL3", "LOCAL4", "LOCAL5", "LOCAL6", "LOCAL7" ]
     quiet: yes
 
-- name: assert | Test if openssh_loglevel is set correctly
+- name: assert | Test openssh_loglevel
   ansible.builtin.assert:
     that:
       - openssh_loglevel is defined
@@ -55,7 +55,7 @@
       - openssh_loglevel in [ "QUIET", "FATAL", "ERROR", "INFO", "VERBOSE", "DEBUG", "DEBUG1", "DEBUG2", "DEBUG3" ]
     quiet: yes
 
-- name: assert | Test if openssh_login_grace_time is set correctly
+- name: assert | Test openssh_login_grace_time
   ansible.builtin.assert:
     that:
       - openssh_login_grace_time is defined
@@ -63,7 +63,7 @@
       - openssh_login_grace_time is not none
     quiet: yes
 
-- name: assert | Test if openssh_permit_root_login is set correctly
+- name: assert | Test openssh_permit_root_login
   ansible.builtin.assert:
     that:
       - openssh_permit_root_login is defined
@@ -71,7 +71,7 @@
       - openssh_permit_root_login in [ "yes", "no", "without-password", "prohibit-password", "forced-commands-only" ]
     quiet: yes
 
-- name: assert | Test if openssh_strict_modes is set correctly
+- name: assert | Test openssh_strict_modes
   ansible.builtin.assert:
     that:
       - openssh_strict_modes is defined
@@ -79,7 +79,7 @@
       - openssh_strict_modes in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_max_auth_tries is set correctly
+- name: assert | Test openssh_max_auth_tries
   ansible.builtin.assert:
     that:
       - openssh_max_auth_tries is defined
@@ -87,7 +87,7 @@
       - openssh_max_auth_tries >= 0
     quiet: yes
 
-- name: assert | Test if openssh_max_sessions is set correctly
+- name: assert | Test openssh_max_sessions
   ansible.builtin.assert:
     that:
       - openssh_max_sessions is defined
@@ -95,7 +95,7 @@
       - openssh_max_sessions >= 0
     quiet: yes
 
-- name: assert | Test if openssh_pub_key_authentication is set correctly
+- name: assert | Test openssh_pub_key_authentication
   ansible.builtin.assert:
     that:
       - openssh_pub_key_authentication is defined
@@ -103,7 +103,7 @@
       - openssh_pub_key_authentication in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_authorized_key_file is set correctly
+- name: assert | Test openssh_authorized_key_file
   ansible.builtin.assert:
     that:
       - openssh_authorized_key_file is defined
@@ -111,7 +111,7 @@
       - openssh_authorized_key_file is not none
     quiet: yes
 
-- name: assert | Test if openssh_authorized_prinicpals_file is set correctly
+- name: assert | Test openssh_authorized_prinicpals_file
   ansible.builtin.assert:
     that:
       - openssh_authorized_prinicpals_file is defined
@@ -119,7 +119,7 @@
       - openssh_authorized_prinicpals_file is not none
     quiet: yes
 
-- name: assert | Test if openssh_authorized_keys_command is set correctly
+- name: assert | Test openssh_authorized_keys_command
   ansible.builtin.assert:
     that:
       - openssh_authorized_keys_command is defined
@@ -127,7 +127,7 @@
       - openssh_authorized_keys_command is not none
     quiet: yes
 
-- name: assert | Test if openssh_authorized_keys_command_user is set correctly
+- name: assert | Test openssh_authorized_keys_command_user
   ansible.builtin.assert:
     that:
       - openssh_authorized_keys_command_user is defined
@@ -135,7 +135,7 @@
       - openssh_authorized_keys_command_user is not none
     quiet: yes
 
-- name: assert | Test if openssh_host_based_authentication is set correctly
+- name: assert | Test openssh_host_based_authentication
   ansible.builtin.assert:
     that:
       - openssh_host_based_authentication is defined
@@ -143,7 +143,7 @@
       - openssh_host_based_authentication in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_ignore_user_known_hosts is set correctly
+- name: assert | Test openssh_ignore_user_known_hosts
   ansible.builtin.assert:
     that:
       - openssh_ignore_user_known_hosts is defined
@@ -151,7 +151,7 @@
       - openssh_ignore_user_known_hosts in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_ignore_rhosts is set correctly
+- name: assert | Test openssh_ignore_rhosts
   ansible.builtin.assert:
     that:
       - openssh_ignore_rhosts is defined
@@ -159,7 +159,7 @@
       - openssh_ignore_rhosts in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_permit_empty_passwords is set correctly
+- name: assert | Test openssh_permit_empty_passwords
   ansible.builtin.assert:
     that:
       - openssh_permit_empty_passwords is defined
@@ -167,7 +167,7 @@
       - openssh_permit_empty_passwords in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_password_authentication is set correctly
+- name: assert | Test openssh_password_authentication
   ansible.builtin.assert:
     that:
       - openssh_password_authentication is defined
@@ -175,7 +175,7 @@
       - openssh_password_authentication in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_challenge_response_authentication is set correctly
+- name: assert | Test openssh_challenge_response_authentication
   ansible.builtin.assert:
     that:
       - openssh_challenge_response_authentication is defined
@@ -183,7 +183,7 @@
       - openssh_challenge_response_authentication in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_gssapi_authentication is set correctly
+- name: assert | Test openssh_gssapi_authentication
   ansible.builtin.assert:
     that:
       - openssh_gssapi_authentication is defined
@@ -191,7 +191,7 @@
       - openssh_gssapi_authentication in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_gssapi_cleanup_credentials is set correctly
+- name: assert | Test openssh_gssapi_cleanup_credentials
   ansible.builtin.assert:
     that:
       - openssh_gssapi_cleanup_credentials is defined
@@ -199,7 +199,7 @@
       - openssh_gssapi_cleanup_credentials in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_gssapi_strict_acceptor_check is set correctly
+- name: assert | Test openssh_gssapi_strict_acceptor_check
   ansible.builtin.assert:
     that:
       - openssh_gssapi_strict_acceptor_check is defined
@@ -207,7 +207,7 @@
       - openssh_gssapi_strict_acceptor_check in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_gssapi_key_exchange is set correctly
+- name: assert | Test openssh_gssapi_key_exchange
   ansible.builtin.assert:
     that:
       - openssh_gssapi_key_exchange is defined
@@ -215,7 +215,7 @@
       - openssh_gssapi_key_exchange in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_gssaip_enable_k5_users is set correctly
+- name: assert | Test openssh_gssaip_enable_k5_users
   ansible.builtin.assert:
     that:
       - openssh_gssaip_enable_k5_users is defined
@@ -223,7 +223,7 @@
       - openssh_gssaip_enable_k5_users in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_use_pam is set correctly
+- name: assert | Test openssh_use_pam
   ansible.builtin.assert:
     that:
       - openssh_use_pam is defined
@@ -231,7 +231,7 @@
       - openssh_use_pam in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_allow_agent_forwarding is set correctly
+- name: assert | Test openssh_allow_agent_forwarding
   ansible.builtin.assert:
     that:
       - openssh_allow_agent_forwarding is defined
@@ -239,7 +239,7 @@
       - openssh_allow_agent_forwarding in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_allow_tcp_forwarding is set correctly
+- name: assert | Test openssh_allow_tcp_forwarding
   ansible.builtin.assert:
     that:
       - openssh_allow_tcp_forwarding is defined
@@ -247,7 +247,7 @@
       - openssh_allow_tcp_forwarding in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_gateway_ports is set correctly
+- name: assert | Test openssh_gateway_ports
   ansible.builtin.assert:
     that:
       - openssh_gateway_ports is defined
@@ -255,7 +255,7 @@
       - openssh_gateway_ports in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_x11_forwarding is set correctly
+- name: assert | Test openssh_x11_forwarding
   ansible.builtin.assert:
     that:
       - openssh_x11_forwarding is defined
@@ -263,7 +263,7 @@
       - openssh_x11_forwarding in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_x11_display_offset is set correctly
+- name: assert | Test openssh_x11_display_offset
   ansible.builtin.assert:
     that:
       - openssh_x11_display_offset is defined
@@ -271,7 +271,7 @@
       - openssh_x11_display_offset > 0
     quiet: yes
 
-- name: assert | Test if openssh_x11_use_localhost is set correctly
+- name: assert | Test openssh_x11_use_localhost
   ansible.builtin.assert:
     that:
       - openssh_x11_use_localhost is defined
@@ -279,7 +279,7 @@
       - openssh_x11_use_localhost in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_permit_tty is set correctly
+- name: assert | Test openssh_permit_tty
   ansible.builtin.assert:
     that:
       - openssh_permit_tty is defined
@@ -287,7 +287,7 @@
       - openssh_permit_tty in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_print_motd is set correctly
+- name: assert | Test openssh_print_motd
   ansible.builtin.assert:
     that:
       - openssh_print_motd is defined
@@ -295,7 +295,7 @@
       - openssh_print_motd in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_print_last_log is set correctly
+- name: assert | Test openssh_print_last_log
   ansible.builtin.assert:
     that:
       - openssh_print_last_log is defined
@@ -303,7 +303,7 @@
       - openssh_print_last_log in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_tcp_keep_alive is set correctly
+- name: assert | Test openssh_tcp_keep_alive
   ansible.builtin.assert:
     that:
       - openssh_tcp_keep_alive is defined
@@ -311,7 +311,7 @@
       - openssh_tcp_keep_alive in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_permit_user_environment is set correctly
+- name: assert | Test openssh_permit_user_environment
   ansible.builtin.assert:
     that:
       - openssh_permit_user_environment is defined
@@ -319,7 +319,7 @@
       - openssh_permit_user_environment in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_compression is set correctly
+- name: assert | Test openssh_compression
   ansible.builtin.assert:
     that:
       - openssh_compression is defined
@@ -327,7 +327,7 @@
       - openssh_compression in [ "yes", "no", "delayed" ]
     quiet: yes
 
-- name: assert | Test if openssh_client_alive_interval is set correctly
+- name: assert | Test openssh_client_alive_interval
   ansible.builtin.assert:
     that:
       - openssh_client_alive_interval is defined
@@ -335,7 +335,7 @@
       - openssh_client_alive_interval >= 0
     quiet: yes
 
-- name: assert | Test if openssh_client_alive_count_max is set correctly
+- name: assert | Test openssh_client_alive_count_max
   ansible.builtin.assert:
     that:
       - openssh_client_alive_count_max is defined
@@ -343,7 +343,7 @@
       - openssh_client_alive_count_max >= 0
     quiet: yes
 
-- name: assert | Test if openssh_show_patch_level is set correctly
+- name: assert | Test openssh_show_patch_level
   ansible.builtin.assert:
     that:
       - openssh_show_patch_level is defined
@@ -351,7 +351,7 @@
       - openssh_show_patch_level in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_use_dns is set correctly
+- name: assert | Test openssh_use_dns
   ansible.builtin.assert:
     that:
       - openssh_use_dns is defined
@@ -359,7 +359,7 @@
       - openssh_use_dns in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_pid_file is set correctly
+- name: assert | Test openssh_pid_file
   ansible.builtin.assert:
     that:
       - openssh_pid_file is defined
@@ -367,7 +367,7 @@
       - openssh_pid_file is not none
     quiet: yes
 
-- name: assert | Test if openssh_max_startups is set correctly
+- name: assert | Test openssh_max_startups
   ansible.builtin.assert:
     that:
       - openssh_max_startups is defined
@@ -375,7 +375,7 @@
       - openssh_max_startups is not none
     quiet: yes
 
-- name: assert | Test if openssh_permit_tunnel is set correctly
+- name: assert | Test openssh_permit_tunnel
   ansible.builtin.assert:
     that:
       - openssh_permit_tunnel is defined
@@ -383,7 +383,7 @@
       - openssh_permit_tunnel in [ "yes", "no" ]
     quiet: yes
 
-- name: assert | Test if openssh_chroot_directory is set correctly
+- name: assert | Test openssh_chroot_directory
   ansible.builtin.assert:
     that:
       - openssh_chroot_directory is defined
@@ -391,7 +391,7 @@
       - openssh_chroot_directory is not none
     quiet: yes
 
-- name: assert | Test if openssh_version_addendum is set correctly
+- name: assert | Test openssh_version_addendum
   ansible.builtin.assert:
     that:
       - openssh_version_addendum is defined
@@ -399,7 +399,7 @@
       - openssh_version_addendum is not none
     quiet: yes
 
-- name: assert | Test if openssh_banner is set correctly
+- name: assert | Test openssh_banner
   ansible.builtin.assert:
     that:
       - openssh_banner is defined
@@ -407,14 +407,14 @@
       - openssh_banner is not none
     quiet: yes
 
-- name: assert | Test if openssh_accept_envs is set correctly
+- name: assert | Test openssh_accept_envs
   ansible.builtin.assert:
     that:
       - openssh_accept_envs is defined
       - openssh_accept_envs is iterable
     quiet: yes
 
-- name: assert | Test if openssh_subsystem is set correctly
+- name: assert | Test openssh_subsystem
   ansible.builtin.assert:
     that:
       - openssh_subsystem is defined
@@ -422,7 +422,7 @@
       - openssh_subsystem is not none
     quiet: yes
 
-- name: assert | Test if openssh_trusted_user_ca_keys is set correctly
+- name: assert | Test openssh_trusted_user_ca_keys
   ansible.builtin.assert:
     that:
       - openssh_trusted_user_ca_keys is defined
@@ -430,7 +430,7 @@
       - openssh_trusted_user_ca_keys is not none
     quiet: yes
 
-- name: assert | Test if openssh_allow_users is set correctly
+- name: assert | Test openssh_allow_users
   ansible.builtin.assert:
     that:
       - openssh_allow_users is iterable
@@ -438,7 +438,7 @@
   when:
     - openssh_allow_users is defined
 
-- name: assert | Test if openssh_allow_groups is set correctly
+- name: assert | Test openssh_allow_groups
   ansible.builtin.assert:
     that:
       - openssh_allow_groups is iterable
