Change yes/no to true/false, adhere to yamlspec 1.2.2

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -1,8 +1,8 @@
 ---
 - name: Verify
   hosts: all
-  become: yes
-  gather_facts: no
+  become: true
+  gather_facts: false
 
   tasks:
     - name: Check if connection still works
@@ -12,7 +12,7 @@
       ansible.builtin.lineinfile:
         path: /etc/ssh/sshd_config
         line: AllowUsers root
-      check_mode: yes
+      check_mode: true
       register: openssh_check_if_allowusers_is_set
       failed_when:
         - openssh_check_if_allowusers_is_set is changed
@@ -21,7 +21,7 @@
       ansible.builtin.lineinfile:
         path: /etc/ssh/sshd_config
         line: AllowGroups root
-      check_mode: yes
+      check_mode: true
       register: openssh_check_if_allowgroups_is_set
       failed_when:
         - openssh_check_if_allowgroups_is_set is changed
