--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -7,7 +7,7 @@
       - openssh_port is number
       - openssh_port > 0
       - openssh_port < 65536
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_address_family
   ansible.builtin.assert:
@@ -15,21 +15,21 @@
       - openssh_address_family is defined
       - openssh_address_family is string
       - openssh_address_family in [ "any", "inet", "inet6" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_listen_addresses
   ansible.builtin.assert:
     that:
       - openssh_listen_addresses is defined
       - openssh_listen_addresses is iterable
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_host_keys
   ansible.builtin.assert:
     that:
       - openssh_host_keys is defined
       - openssh_host_keys is iterable
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_rekey_limit
   ansible.builtin.assert:
@@ -37,7 +37,7 @@
       - openssh_rekey_limit is defined
       - openssh_rekey_limit is string
       - openssh_rekey_limit is not none
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_syslog_facility
   ansible.builtin.assert:
@@ -45,7 +45,7 @@
       - openssh_syslog_facility is defined
       - openssh_syslog_facility is string
       - openssh_syslog_facility in [ "DAEMON", "USER", "AUTH", "LOCAL0", "LOCAL1", "LOCAL2", "LOCAL3", "LOCAL4", "LOCAL5", "LOCAL6", "LOCAL7" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_loglevel
   ansible.builtin.assert:
@@ -53,7 +53,7 @@
       - openssh_loglevel is defined
       - openssh_loglevel is string
       - openssh_loglevel in [ "QUIET", "FATAL", "ERROR", "INFO", "VERBOSE", "DEBUG", "DEBUG1", "DEBUG2", "DEBUG3" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_login_grace_time
   ansible.builtin.assert:
@@ -61,7 +61,7 @@
       - openssh_login_grace_time is defined
       - openssh_login_grace_time is string
       - openssh_login_grace_time is not none
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_permit_root_login
   ansible.builtin.assert:
@@ -69,7 +69,7 @@
       - openssh_permit_root_login is defined
       - openssh_permit_root_login is string
       - openssh_permit_root_login in [ "yes", "no", "without-password", "prohibit-password", "forced-commands-only" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_strict_modes
   ansible.builtin.assert:
@@ -77,7 +77,7 @@
       - openssh_strict_modes is defined
       - openssh_strict_modes is string
       - openssh_strict_modes in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_max_auth_tries
   ansible.builtin.assert:
@@ -85,7 +85,7 @@
       - openssh_max_auth_tries is defined
       - openssh_max_auth_tries is number
       - openssh_max_auth_tries >= 0
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_max_sessions
   ansible.builtin.assert:
@@ -93,7 +93,7 @@
       - openssh_max_sessions is defined
       - openssh_max_sessions is number
       - openssh_max_sessions >= 0
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_pub_key_authentication
   ansible.builtin.assert:
@@ -101,7 +101,7 @@
       - openssh_pub_key_authentication is defined
       - openssh_pub_key_authentication is string
       - openssh_pub_key_authentication in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_authorized_key_file
   ansible.builtin.assert:
@@ -109,7 +109,7 @@
       - openssh_authorized_key_file is defined
       - openssh_authorized_key_file is string
       - openssh_authorized_key_file is not none
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_authorized_prinicpals_file
   ansible.builtin.assert:
@@ -117,7 +117,7 @@
       - openssh_authorized_prinicpals_file is defined
       - openssh_authorized_prinicpals_file is string
       - openssh_authorized_prinicpals_file is not none
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_authorized_keys_command
   ansible.builtin.assert:
@@ -125,7 +125,7 @@
       - openssh_authorized_keys_command is defined
       - openssh_authorized_keys_command is string
       - openssh_authorized_keys_command is not none
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_authorized_keys_command_user
   ansible.builtin.assert:
@@ -133,7 +133,7 @@
       - openssh_authorized_keys_command_user is defined
       - openssh_authorized_keys_command_user is string
       - openssh_authorized_keys_command_user is not none
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_host_based_authentication
   ansible.builtin.assert:
@@ -141,7 +141,7 @@
       - openssh_host_based_authentication is defined
       - openssh_host_based_authentication is string
       - openssh_host_based_authentication in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_ignore_user_known_hosts
   ansible.builtin.assert:
@@ -149,7 +149,7 @@
       - openssh_ignore_user_known_hosts is defined
       - openssh_ignore_user_known_hosts is string
       - openssh_ignore_user_known_hosts in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_ignore_rhosts
   ansible.builtin.assert:
@@ -157,7 +157,7 @@
       - openssh_ignore_rhosts is defined
       - openssh_ignore_rhosts is string
       - openssh_ignore_rhosts in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_permit_empty_passwords
   ansible.builtin.assert:
@@ -165,7 +165,7 @@
       - openssh_permit_empty_passwords is defined
       - openssh_permit_empty_passwords is string
       - openssh_permit_empty_passwords in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_password_authentication
   ansible.builtin.assert:
@@ -173,7 +173,7 @@
       - openssh_password_authentication is defined
       - openssh_password_authentication is string
       - openssh_password_authentication in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_challenge_response_authentication
   ansible.builtin.assert:
@@ -181,7 +181,7 @@
       - openssh_challenge_response_authentication is defined
       - openssh_challenge_response_authentication is string
       - openssh_challenge_response_authentication in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_gssapi_authentication
   ansible.builtin.assert:
@@ -189,7 +189,7 @@
       - openssh_gssapi_authentication is defined
       - openssh_gssapi_authentication is string
       - openssh_gssapi_authentication in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_gssapi_cleanup_credentials
   ansible.builtin.assert:
@@ -197,7 +197,7 @@
       - openssh_gssapi_cleanup_credentials is defined
       - openssh_gssapi_cleanup_credentials is string
       - openssh_gssapi_cleanup_credentials in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_gssapi_strict_acceptor_check
   ansible.builtin.assert:
@@ -205,7 +205,7 @@
       - openssh_gssapi_strict_acceptor_check is defined
       - openssh_gssapi_strict_acceptor_check is string
       - openssh_gssapi_strict_acceptor_check in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_gssapi_key_exchange
   ansible.builtin.assert:
@@ -213,7 +213,7 @@
       - openssh_gssapi_key_exchange is defined
       - openssh_gssapi_key_exchange is string
       - openssh_gssapi_key_exchange in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_gssaip_enable_k5_users
   ansible.builtin.assert:
@@ -221,7 +221,7 @@
       - openssh_gssaip_enable_k5_users is defined
       - openssh_gssaip_enable_k5_users is string
       - openssh_gssaip_enable_k5_users in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_use_pam
   ansible.builtin.assert:
@@ -229,7 +229,7 @@
       - openssh_use_pam is defined
       - openssh_use_pam is string
       - openssh_use_pam in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_allow_agent_forwarding
   ansible.builtin.assert:
@@ -237,7 +237,7 @@
       - openssh_allow_agent_forwarding is defined
       - openssh_allow_agent_forwarding is string
       - openssh_allow_agent_forwarding in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_allow_tcp_forwarding
   ansible.builtin.assert:
@@ -245,7 +245,7 @@
       - openssh_allow_tcp_forwarding is defined
       - openssh_allow_tcp_forwarding is string
       - openssh_allow_tcp_forwarding in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_gateway_ports
   ansible.builtin.assert:
@@ -253,7 +253,7 @@
       - openssh_gateway_ports is defined
       - openssh_gateway_ports is string
       - openssh_gateway_ports in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_x11_forwarding
   ansible.builtin.assert:
@@ -261,7 +261,7 @@
       - openssh_x11_forwarding is defined
       - openssh_x11_forwarding is string
       - openssh_x11_forwarding in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_x11_display_offset
   ansible.builtin.assert:
@@ -269,7 +269,7 @@
       - openssh_x11_display_offset is defined
       - openssh_x11_display_offset is number
       - openssh_x11_display_offset > 0
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_x11_use_localhost
   ansible.builtin.assert:
@@ -277,7 +277,7 @@
       - openssh_x11_use_localhost is defined
       - openssh_x11_use_localhost is string
       - openssh_x11_use_localhost in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_permit_tty
   ansible.builtin.assert:
@@ -285,7 +285,7 @@
       - openssh_permit_tty is defined
       - openssh_permit_tty is string
       - openssh_permit_tty in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_print_motd
   ansible.builtin.assert:
@@ -293,7 +293,7 @@
       - openssh_print_motd is defined
       - openssh_print_motd is string
       - openssh_print_motd in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_print_last_log
   ansible.builtin.assert:
@@ -301,7 +301,7 @@
       - openssh_print_last_log is defined
       - openssh_print_last_log is string
       - openssh_print_last_log in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_tcp_keep_alive
   ansible.builtin.assert:
@@ -309,7 +309,7 @@
       - openssh_tcp_keep_alive is defined
       - openssh_tcp_keep_alive is string
       - openssh_tcp_keep_alive in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_permit_user_environment
   ansible.builtin.assert:
@@ -317,7 +317,7 @@
       - openssh_permit_user_environment is defined
       - openssh_permit_user_environment is string
       - openssh_permit_user_environment in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_compression
   ansible.builtin.assert:
@@ -325,7 +325,7 @@
       - openssh_compression is defined
       - openssh_compression is string
       - openssh_compression in [ "yes", "no", "delayed" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_client_alive_interval
   ansible.builtin.assert:
@@ -333,7 +333,7 @@
       - openssh_client_alive_interval is defined
       - openssh_client_alive_interval is number
       - openssh_client_alive_interval >= 0
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_client_alive_count_max
   ansible.builtin.assert:
@@ -341,7 +341,7 @@
       - openssh_client_alive_count_max is defined
       - openssh_client_alive_count_max is number
       - openssh_client_alive_count_max >= 0
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_show_patch_level
   ansible.builtin.assert:
@@ -349,7 +349,7 @@
       - openssh_show_patch_level is defined
       - openssh_show_patch_level is string
       - openssh_show_patch_level in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_use_dns
   ansible.builtin.assert:
@@ -357,7 +357,7 @@
       - openssh_use_dns is defined
       - openssh_use_dns is string
       - openssh_use_dns in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_pid_file
   ansible.builtin.assert:
@@ -365,7 +365,7 @@
       - openssh_pid_file is defined
       - openssh_pid_file is string
       - openssh_pid_file is not none
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_max_startups
   ansible.builtin.assert:
@@ -373,7 +373,7 @@
       - openssh_max_startups is defined
       - openssh_max_startups is string
       - openssh_max_startups is not none
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_permit_tunnel
   ansible.builtin.assert:
@@ -381,7 +381,7 @@
       - openssh_permit_tunnel is defined
       - openssh_permit_tunnel is string
       - openssh_permit_tunnel in [ "yes", "no" ]
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_chroot_directory
   ansible.builtin.assert:
@@ -389,7 +389,7 @@
       - openssh_chroot_directory is defined
       - openssh_chroot_directory is string
       - openssh_chroot_directory is not none
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_version_addendum
   ansible.builtin.assert:
@@ -397,7 +397,7 @@
       - openssh_version_addendum is defined
       - openssh_version_addendum is string
       - openssh_version_addendum is not none
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_banner
   ansible.builtin.assert:
@@ -405,14 +405,14 @@
       - openssh_banner is defined
       - openssh_banner is string
       - openssh_banner is not none
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_accept_envs
   ansible.builtin.assert:
     that:
       - openssh_accept_envs is defined
       - openssh_accept_envs is iterable
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_subsystem
   ansible.builtin.assert:
@@ -420,7 +420,7 @@
       - openssh_subsystem is defined
       - openssh_subsystem is string
       - openssh_subsystem is not none
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_trusted_user_ca_keys
   ansible.builtin.assert:
@@ -428,13 +428,13 @@
       - openssh_trusted_user_ca_keys is defined
       - openssh_trusted_user_ca_keys is string
       - openssh_trusted_user_ca_keys is not none
-    quiet: yes
+    quiet: true
 
 - name: assert | Test openssh_allow_users
   ansible.builtin.assert:
     that:
       - openssh_allow_users is iterable
-    quiet: yes
+    quiet: true
   when:
     - openssh_allow_users is defined
 
@@ -442,6 +442,6 @@
   ansible.builtin.assert:
     that:
       - openssh_allow_groups is iterable
-    quiet: yes
+    quiet: true
   when:
     - openssh_allow_groups is defined
