--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,7 +4,7 @@
 - name: Import assert.yml
   ansible.builtin.import_tasks:
     file: assert.yml
-  run_once: yes
+  run_once: true
   delegate_to: localhost
 
 - name: Install openssh
@@ -51,7 +51,7 @@
   ansible.builtin.service:
     name: "{{ openssh_service }}"
     state: started
-    enabled: yes
+    enabled: true
 
 - name: Flush handlers
   ansible.builtin.meta: flush_handlers
