--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,7 +5,7 @@
   gather_facts: true
 
   roles:
-    - role: ansible-role-openssh
+    - role: robertdebock.openssh
       openssh_allow_users:
         - root
       openssh_allow_groups:
